# dr_tools

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: complete_genome.ann  complete_genome.fa  complete_genome.json  complete_genome.v2.json  complete_genome_with_comment.ann  vrl_result.ann  vrl_result.fa  vrl_result.json  vrl_result.v2.json
src/dr_tools/: MSS.py  __init__.py  ann2json.py  json2ann.py  json2biopython.py  json2fasta.py  json2stats.py  json_utils.py
src/mss_tools/: MSS.py  __init__.py  ann2json.py  json2ann.py  json2biopython.py  json2fasta.py  json2gbk.py  json2stats.py  json_utils.py
tests/: conftest.py  test_ann2json.py  test_json2ann.py  test_json2biopython.py  test_json2fasta.py  test_json2stats.py  test_mss.py
