[project]
name = "dr_tools"
version = "0.0.1"
authors = [{ name="nigyta", email="yt@nig.ac.jp" }]
description = "Utility tools for handling DFAST Record JSON and DDBJ MSS Files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests ~= 2.23.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]


[project.scripts]
drt_hello = "dr_tools:hello"
drt_ann2json = "dr_tools.ann2json:main"
drt_json2ann = "dr_tools.json2ann:main"
drt_json2gbk = "dr_tools.json2biopython:json2gbk_main"
drt_json2fasta = "dr_tools.json2fasta:json2fasta_main"
drt_json2stats_for_dfast = "dr_tools.json2stats:json2stats_for_dfast_main"


[project.urls]
"Homepage" = "https://github.com/ddbj/dr_tools"
"Bug Tracker" = "https://github.com/ddbj/dr_tools/issues"
